# lab-06-multithreads

./: CMakeLists.txt
include/: header.hpp
sources/: source.cpp
tests/: test.cpp
